Bug 233372 - Bogus error message shown in viewer right after startup
Summary: Bogus error message shown in viewer right after startup
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-04-05 17:39 UTC by Thomas McGuire
Modified: 2010-04-06 14:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-05 17:39:08 UTC
The following error message is shown in the viewer pane, right after startup:
"Message loading failed: Akonadi::Exception: No remote identifier specified."

The error message has totally wrong layout, and is not understandable by users. Also, there shouldn't be an error in the first place.
Comment 1 Thomas McGuire 2010-04-06 14:38:39 UTC
SVN commit 1111679 by tmcguire:

Don't attempt to fetch invalid items.

The item passed to setMessage is not always valid.
This recent regression was introduced when the monitor for the item was
added.
Now the "Show Raw Message" button for Toltec mails works in the seperate
window again, just as others there like the expand/collapse quote mark
signs.

This concludes the merge of r1101287.

BUG: 233372

 M  +2 -2      viewer.cpp  
 M  +4 -2      viewer_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1111679