Don't attempt to fetch invalid items.

The item passed to setMessage is not always valid.
This recent regression was introduced when the monitor for the item was
added.
Now the "Show Raw Message" button for Toltec mails works in the seperate
window again, just as others there like the expand/collapse quote mark
signs.

This concludes the merge of r1101287.

BUG: 233372

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1111679